@@ -1,0 +1,8 @@
+use strict;
+use warnings;
+
+use Test::More;
+use Test::Warnings;
+
+pass('yay!');
+done_testing;
