@@ -1,11 +1,8 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::More tests => 3;
 use Test::Warnings ':all';
 
 pass('yay!');
 like(warning { warn "oh noes!" }, qr/^oh noes/, 'we warned');
-
-done_testing;
-
